[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Layered configuration system built upon serde"
documentation = "https://docs.rs/serfig"
repository = "https://github.com/Xuanwo/serfig"
edition = "2021"
license = "Apache-2.0"
name = "serfig"
version = "0.1.0"

[dependencies]
serde = "1"
serde-bridge = { git = "https://github.com/datafuse-extras/serde-bridge", rev = "4f0e99a" }
serde-env = { git = "https://github.com/datafuse-extras/serde-env", rev = "085d4b1" }
anyhow = "1"
indexmap = "2"
toml = "0.7"
log = "0.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
temp-env = "0.3"
env_logger = "0.10"
